CSS/style.css
/*FOR THE WHOLE PAGE*/
#bloc-page{
    width: 992px;
    margin: auto;}
body{
    font-family: 'Raleway', sans-serif;
    font-weight: normal;
    font-style: normal;}
h2{
    font-size: 18px; 
    font-weight: bold;}
h3{
    font-size: 13px; 
    font-weight: bold;}
p{
    font-size: 12px;}
li{
    font-size: 12px;
    padding-top: 10px;}
i{
    color:#0065FC; padding: 10px 10px;}
.black{
    color: black;
    border-radius: 25px 0px 0px 25px;
    background-color: #F2F2F2;}
.blue{
    color: #0065FC;
    border-radius: 11px;
    border: 1px #DEEBFF;
    padding: 12px;
    background-color: #DEEBFF;}
.approved{
    color:#0065FC;
    font-size: 9px;
    padding: 0; 
    margin: 0;}
.cancelled{
    color: #F2F2F2;
    font-size: 9px;
    padding: 0; 
    margin: 0;}

/*HEADER*/
header{
    display: flex;
    justify-content: space-between;}
header img{
    height: 40px;
    align-items: baseline;
    padding-top:15px;}
header nav{
    margin:0 10px;}
header a{
    color: black; 
    text-decoration: none;
    padding-top:15px;}
header a:hover{
    color:#0065FC;
    border-top:2px #0065FC solid;}
#menu nav ul{
    display: flex; 
    list-style: none;}
#menu nav li{
    margin: 0 15px;}

/*MAIN CONTENTS*/

/*SEARCH FORM*/
#search-form{
    display:flex;
    flex-direction: column;}
#search-form h2{
    margin-left:15px;}
#addition{
    margin-top: -5px; 
    margin-left: 15px; 
    margin-bottom: 20px;}
#fill-out{
    display:flex;
    height: 30px;
    align-items: center;
    margin-bottom: 20px;
    margin-left: 15px;}
form {
    vertical-align: baseline;}
#ville{
    position:relative;
    padding: 6px 15px 6px 15px;}
input#ville{outline:none;}
::placeholder{
    vertical-align: baseline;
    font-weight: bold;
    color:black;
    font-size:13px;}
.button{
    font-size:14px;
    font-weight: bold;
    color:white;
    background-color: #0065FC;
    padding: 6px 15px 10px 6px;
    border-color: #F2F2F2;
    border-radius: 0px 25px 25px 0px;
    cursor: pointer;}
#search-icon{
    display:none;
    padding:3px; 
    background-color:#0065FC; 
    color:white;
    cursor: pointer;}
.filters{
    font-weight: bold;
    display: flex;
    width: 80%;
    justify-content: space-around;}
#filter-title{
    font-weight: bold;}
.filters i{
    border-radius:25px 25px 25px 25px;}
.filter-button{
    display: flex;
    justify-content: space-between;
    padding: 0px 8px 0px 0px;  
    border-radius: 25px; 
    border: 2px #F2F2F2 solid ;
    border-left: none;
    cursor: pointer;}
.filter-button:hover{
    color: #0065FC; font-size: larger;}
.filter-button p{
    white-space: nowrap;
    padding: 0px 10px;}
#comment{
    width: 400px;
    margin-bottom: 15px;
    display: flex;
    justify-content: flex-start;
    align-items: baseline;}
#comment p{
    margin-left: 15px;}
.circle{
    color:#F2F2F2; 
    font-size: 18px;
    font-weight:lighter;}
.dot{
    font-size: 11px; 
    font-weight: bold;}

/*RESULTS ACCOMMODATION*/
#results{
    width: 100%;
    display: flex;
    justify-content: space-around;}

/*MAIN RESULTS*/
#main-results{
    width: 62%;
    background-color:#F2F2F2;
    border-radius: 20px;
    padding: 10px 0 0 0;}
#main-items{
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;}
.hotel-image{
    width: 170px;
    height: 85px;
    object-fit: cover;
    border-radius: 20px 20px 0 0;}
.hotel{
    display: flex;
    flex-direction: column;
    background-color:white;
    border-radius: 20px;
    padding: 3px;
    margin: 8px;
    box-shadow: 0px 8px 8px -3px #b6b4b4;}
.hotel-description{
    line-height:3px;
    padding-left: 8px;}
#main-results h2{
    margin-left: 20px;}
#more{
    font-weight: bold;
    margin: 15px 0 0 20px;}
#main-items a{
    color:black; 
    text-decoration: none;}
#main-items a:hover{
    color:#0065FC;
    font-weight:bolder;
    font-size:14px;}

/*ASIDE*/
aside{
    width: 30%;
    background-color:#F2F2F2;
    border-radius: 20px;
    padding:10px;}
#aside-title{
    display:flex;
    align-items: baseline;
    justify-content: space-between;
    margin: 3px 0 0 10px;}
#aside-results{
    display: flex;
    flex-direction: column;}
.popular{
    display: flex;
    background-color: white;
    padding: 3px;
    margin: 10px;
    border-radius: 20px;
    box-shadow: 0px 8px 8px -3px #b6b4b4;}
#aside-results a{
    color:black; 
    text-decoration: none;}
#aside-results a:hover{
    color:#0065FC;
    font-weight:bolder;
    font-size:larger;
    image-rendering: crisp-edges;}
.popular-image{
    width: 104px;
    height: 101px;
    border-radius: 20px 0px 0px 20px;
    object-fit: cover;}
.popular-description{
    display: flex;
    flex-direction: column;
    justify-content: baseline;
    height: 101px;
    padding-left: 6px;}
.stuck{
    margin-top: -5px;}
.lower{
    padding-top:12px;}

/*ACTIVITIES*/
#activities{
    width: 100%;
    display: flex;
    flex-direction: column;}
#activities h2{
    padding: 20px 0 0 30px;}
.activity h3{
    padding-left: 15px;
    font-weight: bold;}
#results-activities{
    display: flex;
    justify-content:space-around;
    flex-wrap: wrap;}
.photos-activities{
    width: 22%;
    display:flex;
    flex-direction:column;
    justify-content: space-between;
    background-color: white;}
.activity{
    display:flex;
    flex-direction: column;
    width: 100%;
    background-color:white;
    box-shadow: 0px 8px 8px -3px #b6b4b4;
    border-radius:20px;}
.photo-activity1{
    width: 100%;
    height: 300px;
    object-fit: cover;
    border-radius:20px 20px 0 0;}
.photo-activity2{
    width: 100%;
    height: 125px;
    object-fit: cover;
    border-radius:20px 20px 0 0;}
.photo-activity3{
    width: 100%;
    height: 100px;
    object-fit: cover;
    border-radius:20px 20px 0 0;}
.photo-activity4{
    width: 100%;
    height: 110px;
    object-fit: cover;
    border-radius:20px 20px 0 0;}
.photos-activities a{
    color:black; 
    text-decoration: none;}
.photos-activities a:hover{
    color:#0065FC;
    font-size:larger;}

/*FOOTER*/
footer{
    background-color:#F2F2F2;
    display: flex;
    box-sizing: border-box;
    padding-top: 15px;
    margin-top: 35px;}
.footer-block{
    max-width:fit-content;
    padding-right: 100px;}
.footer-block ul{
    list-style: none;}
.subtitle{
    font-weight: bold;}
footer a{
    color: black; 
    text-decoration: none;}
footer a:hover{
    color:#0065FC;
    font-weight:bolder;}

/*MEDIA QUERIES*/
@media all and (max-width:992px)
{
#bloc-page{width: auto;}
header{flex-direction:column;}
header{flex-direction: column; align-items: center;}
#menu nav ul{margin: 0 35px 15px 0;}
header a{color: black; text-decoration: none; padding:0 15px 10px;}
header a:hover{border-top:0px; border-bottom:2px #0065FC solid;}
#search-form h2{justify-content: center;}
.button{display: none;}
#search-icon {display:inline-block; padding:3px; background-color:#0065FC; color:white;}
.filters{width: auto; flex-wrap: wrap;}
#results{width: auto; flex-direction: column-reverse;}
aside{width:auto; padding:20px 10px;justify-content:center;}
.aside-results{justify-content: space-around;}
.popular{width: 300px;}
.popular-image {height:auto; aspect-ratio:1/1;}
.popular-description{width: auto; justify-content:flex-start;}
#main-results{width:auto; justify-content:center;background-color: white;}
#main-items{padding:10px;}
.hotel{ margin: 20px;}
.hotel img {height:auto; aspect-ratio:5/2;}
#results-activities{flex-wrap:wrap;}
.photos-activities{margin:20px 20px 20px 20px;}
.activity{margin: 10px;}
.photo-activity1, .photo-activity2, .photo-activity3, .photo-activity4{width: 100%; height:auto; aspect-ratio:8/4;}
#more{margin: 20px 30px;}
}

@media all and (max-width:768px)
{
#bloc-page{width: auto;}
header{flex-direction: column; align-items: center;}
#menu nav ul{margin: 0 35px 15px 0;}
header a{color: black; text-decoration: none; padding:0 15px 10px;}
header a:hover{border-top:0px; border-bottom:2px #0065FC solid;}
.button{display: none;}
#search-form h2{justify-content: center;}
#filter-title{display:block;}
#filter-title:after {content:"\a"; white-space:pre-line;}
#search-icon {display:contents;}
.filters{width: auto;}
.filter-button{margin-bottom: 10px;}
#results{width: auto; flex-direction: column-reverse;}
aside{width: auto; border-radius:0; padding:20px 10px;}
#main-results {display:flex; flex-direction:column; width:100%; padding:20px 0; background-color:white; border-radius:0;}
#main-items{width:auto; padding:10px;}
.hotel{ margin: 20px;}
.hotel img {width: 100%; height:auto; aspect-ratio:5/2;}
#results-activities{flex-direction:column;}
.photos-activities{width: auto; margin:20px 20px 20px 20px;}
.activity{margin: 10px;}
.photo-activity1, .photo-activity2, .photo-activity3, .photo-activity4{width: 100%; height:auto; aspect-ratio:8/4;}
#more{margin: 20px 30px;}
footer{flex-direction:column;}
}

